@@ -27,6 +27,7 @@ CGfxProjectile::CGfxProjectile()
 {
 	creationTime=lifeTime=0;
 	color[0]=color[1]=color[2]=color[3]=255;
+	checkCol=false;
 }
 
 CGfxProjectile::CGfxProjectile(const float3& pos,const float3& speed,int lifeTime,const float3& color)
